--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
 
     <p>ANTLR Grammar for the OCCI HTTP Text Rendering</p><h2>Dependencies</h2>
 <p>http://antlr.org</p>
-<h2>Authors</h2>
-<p>Andy Edmonds (andy@edmonds.be)<br/><br/>      </p>
-<h2>Contact</h2>
-<p> (andy.edmonds@gmail.com)<br/>      </p>
-
-
+<h2>Authors & Contact</h2>
+<p><a href='andy.edmonds.be'>Andy Edmonds</a>
+<br/>
+<br/>      </p>
     <h2>Download</h2>
     <p>
       You can download this project in either
