--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>ANTLR Grammar for the OCCI HTTP Text Rendering</p><h2>Dependencies</h2>
 <p>http://antlr.org</p>
 <h2>Authors & Contact</h2>
-<p><a href='andy.edmonds.be'>Andy Edmonds</a>
+<p><a href="http://andy.edmonds.be">Andy Edmonds</a>
 <br/>
 <br/>      </p>
     <h2>Download</h2>
